Edited wiki page ContactorAdapter through web user interface.

--- a/wiki/ContactorAdapter.wiki
+++ b/wiki/ContactorAdapter.wiki
@@ -30,3 +30,5 @@ Before use, you should attempt to insure that the relay coil draws no more than 
 If the current limit is observed, additional cooling should not be required. The board should have the same operating temperature range as the OpenEVSE or Hydra controller.
 
 The input side has a resistor sized for 12 volt DC switching. If you use different voltages, you should replace the series resistor. Do not exceed the 50 mA forward current rating of the LED in the optoisolator.
+
+Most contactors have .25" QD terminals for the coil, and auxiliary QD terminals on the relay terminals in addition to a large box screw terminal for the high current wiring. These QD terminals provide an ideal mechanism to provide the coil control voltage. On the AC Line side of the relay, run a 22 gauge wire from one phase to one of the coil inputs. From the other phase, run a 22 gauge wire to one of the adapter AC terminals. Run a 22 gauge wire from the other AC terminal on the adapter to the unused coil input on the contactor. Often each coil terminal will have two QD terminals. *DO NOT* connect both phases to a single coil input terminal - you will short out the AC supply and probably blow the adapter's triac in the process.
