--- a/wiki/OpenEVSE_II.wiki
+++ b/wiki/OpenEVSE_II.wiki
@@ -29,3 +29,40 @@ The CT coil wiring, J1772 pilot line and ground connect to the logic/display boa
 A select button (the pinout of the 3 pin terminal is the same as on the OpenEVSE display board) connects to its terminal on the logic/display board.
 
 A CR1220 battery in the battery clip will preserve the clock when power is disconnected.
+
+== Construction ==
+
+You will need
+
+  * A complete logic/display board
+  * A complete relay/HV board
+  * An OpenEVSE chassis (available from the OpenEVSE store)
+  * A mezzanine cable (4x2 .1" DIP on each end of an 8 wire ribbon cable, 12" long)
+  * A ground bus
+  * A lit pushbutton (available from the OpenEVSE store)
+  * A GFI current transformer (available from the OpenEVSE store)
+  * An ammeter current transformer (optional - CR Magnetcs 8420-1000 recommended)
+  * An AC cable
+  * A J1772 cable / plug assembly
+
+Start with the plastic mounting plate that came with the chassis. Do not remove the paper covering yet. Instead, mark the four corners of a square 3 1/2 inches by 2 11/32. This will be for the mounting holes for the HV/Relay board. You need to arrange the board so that it is out of the way of the other components that will be mounted on the mounting plate - specifically the fuse block (if you're using one) and the ground block. Drill the holes with a 1/8" drill bit. Now you can peel the protective paper coating off both sides.
+
+Attach the HV/Relay board to the mounting plate using the mounting hardware originally intended for the OpenEVSE v2 board using the newly drilled holes. Similarly, attach the fuse block and ground bus to the mounting plate using its intended hardware.
+
+Crimp a spade or ring terminal onto a 12 gauge copper wire. Loosen the screw or nut holding down the HV board nearest the ground bus and secure the ring or spade terminal under it and retighten. Connect the other end of the wire to the ground bus.
+
+Use #10 QD terminals and short lengths of 10 gauge stranded copper wire to connect one end of each fuse block pole to a "LINE" terminal on the HV relay board. Prepare the AC cable by stripping 6 inches of its outer jacket and installing a cable gland. Trim the individual wires to the correct length and connect one hot line of the AC cable to each fuse block on the input side. Connect the ground wire of the AC cable to the ground bus.
+
+Prepare the J1772 cable by stripping 6 inches off the outer jacket. Locate and identify each wire - the two hots, the ground and the pilot. If your cable includes a proximity wire, trim it short to keep it out of the way. Install the cable into its cable gland and install the gland in its chassis hole. Estimate how long the two hots and ground must be to reach their destination. Be sure to leave room for the GFI over both hit lines and the (optional) ammeter coil over one of them. Cut the hot and ground wires to length. Install QD terminals on the hot wires. Screw the ground wire into the ground bus. Pass both hot lines through the GFI CT coil and one of the hot lines (it doesn't matter which) through the ammeter coil (if you're using one). Attach the QD terminals to the LOAD terminals on the relays.
+
+Attach one end of the mezzanine cable to the HV/relay board, taking careful note of the location of pin 1.
+
+Set the chassis aside for now.
+
+Prepare the lid by attaching the waterproofing gasket (if you bought one) and the LCD waterproofing kit (again, if you bought it). Solder the 3 wire cable onto the select switch as instructed and install the button in the hole in the lid. Install the OpenEVSE II logic/display board onto the 4 mounting posts in the lid. Connect the button cable up to the SELECT 3 pin terminal on the board. Connect the GFI CT coil up to the GFI terminals, noting the orientation - the GFI test pin is the left, the GFI pin is in the center, and ground is on the right. If you have one, connect the ammeter coil up to its terminal block - orientation does not matter. Connect the J1772 pilot wire up to the left terminal of the pilot block. Connect the mezzanine cable up to the mezzanine connector in the upper left corner, carefully noting the position of pin 1.
+
+Install a CR1220 battery in the battery clip.
+
+Set the lid on top of the box, carefully inspecting the fit to insure that none of the wires place undue pressure on either of the board and that no wires are pinched. Screw the lid onto the box with the 6 chassis screws.
+
+Assembly is now complete.
