--- a/wiki/OpenEVSE_II.wiki
+++ b/wiki/OpenEVSE_II.wiki
@@ -45,7 +45,7 @@ You will need
   * An AC cable
   * A J1772 cable / plug assembly
 
-Start with the plastic mounting plate that came with the chassis. Do not remove the paper covering yet. Instead, mark the four corners of a square 3 1/2 inches by 2 11/32. This will be for the mounting holes for the HV/Relay board. You need to arrange the board so that it is out of the way of the other components that will be mounted on the mounting plate - specifically the fuse block (if you're using one) and the ground block. Drill the holes with a 1/8" drill bit. Now you can peel the protective paper coating off both sides.
+Start with the plastic mounting plate that came with the chassis. Do not remove the paper covering yet. Instead, mark the four corners of a square 3 3/16 (3.2") inches by 2 11/32 (2.35"). This will be for the mounting holes for the HV/Relay board. You need to arrange the board so that it is out of the way of the other components that will be mounted on the mounting plate - specifically the fuse block (if you're using one) and the ground block. Drill the holes with a 1/8" drill bit. Now you can peel the protective paper coating off both sides.
 
 Attach the HV/Relay board to the mounting plate using the mounting hardware originally intended for the OpenEVSE v2 board using the newly drilled holes. Similarly, attach the fuse block and ground bus to the mounting plate using its intended hardware.
 
