Edited wiki page Hydra_EVSE through web user interface.

--- a/wiki/Hydra_EVSE.wiki
+++ b/wiki/Hydra_EVSE.wiki
@@ -134,6 +134,7 @@ The possible error codes:
   * G - Ground fault detected.
   * E - Pilot state error (including missing diode).
   * O - Overcurrent event detected.
+  * R - Relay test failure.
   * T - Illegal transition (car attempted to request charging when it was not offered a pilot).
 
 If a car enters an error state for whatever reason, the error can be cleared by disconnecting and reconnecting that car.
