--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -10,7 +10,7 @@ There are currently no known incompatibilities with any vehicle or vehicle featu
 OpenEVSE Plus has been tested with:
 || Make || Model || Car Specific Features || Onboard Charger || Known Issues ||
 || BMW ||Active E ||Timers - Supported || || None ||
-|| BMW || i3 || || || ||
+|| BMW || i3 || || 6.6kw - 30A @ 240v || None ||
 || Brammo || Empulse R || electric motorcycle || 3kw - 16A @ 240v || None ||
 || Chevy || VOLT || Timers - Supported || 3.3kW - 16A @ 240V || None ||
 || Chevy || Spark ||Timers - Supported || 3.3kW - 16A @240V ||None||
