--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -9,24 +9,24 @@ There are currently no known incompatibilities with any vehicle or vehicle featu
 = Vehicles Tested =
 OpenEVSE Plus has been tested with:
 || Make || Model || Car Specific Features || Onboard Charger || Known Issues ||
-|| BMW || Active E ||Timers - Supported || 6.6kw 30A @240v || None ||
+|| BMW || Active E || || 6.6kw 30A @240v || None ||
 || BMW || Mini-E || ||12kw 48A @ 240v  || None ||
 || BMW || i3 || || 6.6kw - 30A @ 240v || None ||
 || Brammo || Empulse R || electric motorcycle || 3kw - 16A @ 240v || None ||
-|| Chevy || VOLT || Timers - Supported || 3.3kW - 16A @ 240V || None ||
-|| Chevy || Spark ||Timers - Supported || 3.3kW - 16A @240V ||None||
+|| Chevy || VOLT ||  || 3.3kW - 16A @ 240V || None ||
+|| Chevy || Spark || || 3.3kW - 16A @240V ||None||
 || Ford || Focus EV || || 6.6kw - 30A @ 240V || None ||
-|| Ford || C-Max Energi || Timers - Supported || 3.3kW - 16A @ 240V || None ||
-|| Fiat || 500e || Timers - Supported || 6.6kw - 30A @ 240V || None ||
+|| Ford || C-Max Energi ||  || 3.3kW - 16A @ 240V || None ||
+|| Fiat || 500e ||  || 6.6kw - 30A @ 240V || None ||
 || Fisker || Karma || || 3.3kW - 16A @ 240V || None ||
 || Honda || Fit || || 6.6kw - 30A @ 240V || None ||
 || Mitsubishi || i-MiEV || || 3.3kW - 16A @ 240V || None ||
-|| Nissan || LEAF || Timers - Supported || 6.6kW - 32A @ 240V || None ||
+|| Nissan || LEAF || || 6.6kW - 32A @ 240V || None ||
 || Renault || Zoe || || 22kw 32A 3 Phase / 7.5kw 32A @ 230v|| None ||
 || Tesla || Roadster || with J1772 adapter || 16.8kW - 70A @ 240V || None ||
 || Tesla || Model S || with J1772 adapter || 10kW - 40A @ 240V / 20kw - 80A @ 240V || None ||
 || TH!NK || City EV || || 3.3kW - 16A @ 240V || None ||
-|| Toyota|| PiP || Timers - Supported || 2.8kW - 12A @ 240V || None ||
+|| Toyota|| PiP ||  || 2.8kW - 12A @ 240V || None ||
 || Toyota || Rav4 EV || || 10kw - 40A @240V || None ||
 || Smart || ForTwo ED || || 3.3kw 16A @ 230v || None ||
 || Volvo || V60 Plug in Hybrid || || || None ||
