--- a/wiki/OpenEVSE_DIY_30A.wiki
+++ b/wiki/OpenEVSE_DIY_30A.wiki
@@ -22,12 +22,17 @@ https://open-evse.googlecode.com/files/DIY_OpenEVSE_PLUS_30A.zip
 
 
 == BOM ==
+*Included in Starter Kit*
 ||Part||Value||	Type||	Quantity||	Manufacture||	Part Number|| Marking ||
 ||Board||	||	Board||	1||	GoldPheonix||	Board|| ||
 ||Power	12V||	||PS||	1||	MicroPowerDirect||	MPM-04D-1205|| ||
 ||DCDC||	D117E||	DC/DC converter||	1||	MicroPowerDirect||	D117E|| ||
-||Fuse||	1A||	Fuse||	2||	Bel||	RST 1|| ||
 ||IC1||	328p||	Processor||	1||	Atmel||	ATMEGA328P-PU-ND|| ATMEGA328P-PU ||
+
+
+*Required to Complete*
+||Part||Value||	Type||	Quantity||	Manufacture||	Part Number|| Marking ||
+||Fuse||	1A||	Fuse||	2||	Bel||	RST 1|| ||
 ||IC3, IC5||	MID400||	AC detect||	2 ||	Fairchild Semi	|| MID400|| MID400 ||
 ||IC2||	LF353||	Opamp||	1||	Fairchild Semi||	LF353NFS-ND|| LF353 ||
 ||IC4||	Lm358||	Opamp||	1||	TI||	296-1395-5-ND|| LM368 ||
