Edited wiki page OpenEVSE_DIY_30A through web user interface.

--- a/wiki/OpenEVSE_DIY_30A.wiki
+++ b/wiki/OpenEVSE_DIY_30A.wiki
@@ -2,10 +2,10 @@
 
 
 =OpenEVSE PLUS - DIY 30A Kit=
-The DIY <b><font color=teal> Open</font></b>*EVSE* Plus can be built from a kit available at the <b><font color=teal> Open</font></b>*EVSE* Store or from scratch by sourcing your own board from the source files and components.
+The DIY <b><font color=teal> Open</font></b>*EVSE* Plus can be built from a starter kit available at the <b><font color=teal> Open</font></b>*EVSE* Store.
 
 The kit is available here:
-http://openevse-store.myshopify.com/products/diy-30a-openevse-plus
+http://openevse-store.myshopify.com/
  
 http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8956_1024x1024.jpg?187
 
