--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -2,10 +2,10 @@
 
 
 =OpenEVSE PLUS - DIY Kit=
-The DIY <b><font color=teal> Open</font></b>*EVSE* Plus can but built from a kit available at the <b><font color=teal> Open</font></b>*EVSE* Store or from scratch by sourcing your own board from the source files and components.
+The DIY <b><font color=teal> Open</font></b>*EVSE* Plus can but built from a starter kit available at the <b><font color=teal> Open</font></b>*EVSE* Store.
 
-The kit is avaliable here:
-https://openevse-store.myshopify.com/products/diy-openevse-plus-v2
+The starter kit is avaliable here:
+https://openevse-store.myshopify.com/
  
 http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8024_1024x1024.jpg?187
 
@@ -22,12 +22,17 @@ http://open-evse.googlecode.com/files/DIY_OpenEVSE_PLUS.zip
 
 
 == BOM ==
+*Included in Starter Kit*
 ||Part||Value||	Type||	Quantity||	Manufacture||	Part Number|| Marking ||
 ||Board||	||	Board||	1||	GoldPheonix||	Board|| ||
 ||Power	12V||	||PS||	1||	MicroPowerDirect||	MPM-04D-1205|| ||
 ||DCDC||	D117E||	DC/DC converter||	1||	MicroPowerDirect||	D117E|| ||
-||Fuse||	1A||	Fuse||	2||	Bel||	RST 1|| ||
 ||IC1||	328p||	Processor||	1||	Atmel||	ATMEGA328P-PU-ND|| ATMEGA328P-PU ||
+
+*Required to complete*
+||Part||Value||	Type||	Quantity||	Manufacture||	Part Number|| Marking ||
+||Fuse||	1A||	Fuse||	2||	Bel||	RST 1|| ||
+
 ||IC3, IC5||	MID400||	AC detect||	2 ||	Fairchild Semi	|| MID400|| MID400 ||
 ||IC2||	LF353||	Opamp||	1||	Fairchild Semi||	LF353NFS-ND|| LF353 ||
 ||IC4||	Lm358||	Opamp||	1||	TI||	296-1395-5-ND|| LM368 ||
