Edited wiki page MaxCurrent through web user interface.

--- a/wiki/MaxCurrent.wiki
+++ b/wiki/MaxCurrent.wiki
@@ -20,7 +20,7 @@ There are many ways to change the maximum current offered to the Electric Vehicl
 The CURRENT_CAPACITY sets the default current, setting can be modified when the firmware is loaded or by changing the variable with the FTDI serial port. FTDI to USB or FTDI to Bluetooth adapters are avaliable from Sparkfun.
 
 =Buttons/LCD=
-Firmware 1.0 and later includes the option to change current with a LCD display and a button. The button can either be connected to A3 => Button switch => 10k resistor => Ground or using the select button on the optional Adafruit RGB LCD display.
+Firmware 1.0 and later includes the option to change current with a LCD display and a button. 
 
 http://farm8.staticflickr.com/7113/7835994328_22d61beca6_n.jpg
 
@@ -35,6 +35,20 @@ uint8_t g_L2MaxAmps[] = {10,16,20,25,30,35,40,45,50,55,60,65,70,75,80,0};
 
 
 }}}
+
+*Button Menu*
+
+The Menu options require an LCD and a button switch. The menu operates on Long press and short press. 
+
+Long Press - Press and hold down 
+
+Short Press - Press and release 
+  * To access the menu press the button and hold it down until the menu displays. 
+  * Scroll through the options with a short press the button. 
+  * Change the value of an option Press and hold. 
+  * Scroll through the available values for that particular option short press. 
+  * Select the desired value Press and hold. 
+
 =CLI=
 
 The Command line interface uses a standard terminal such as the one included in the Arduino IDE. The baud rate is 38400.
